--- a/tpl/index.html
+++ b/tpl/index.html
@@ -2,7 +2,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="http://dev.sencha.com/deploy/ext-4.0.0/resources/css/ext-all.css">
 
-    <script type="text/javascript" charset="utf-8" src="http://dev.sencha.com/deploy/ext-4.0.0/ext-all-debug.js"></script>
+    <script type="text/javascript" charset="utf-8" src="http://dev.sencha.com/deploy/ext-4.0.0/ext-all.js"></script>
 
 </head>
 <body>
@@ -13,7 +13,7 @@
     Ext.Loader.setConfig({
         enabled: true
     });
-    Ext.Loader.setPath('Ext.ux', 'http://dev.sencha.com/deploy/ext-4.0.0/examples/ux');
+//    Ext.Loader.setPath('Ext.ux', 'http://dev.sencha.com/deploy/ext-4.0.0/examples/ux');
     Ext.require([
         'Ext.selection.CellModel',
         'Ext.grid.*',
@@ -22,7 +22,6 @@
         'Ext.state.*',
         'Ext.form.*',
         'Ext.encode',
-        'Ext.ux.CheckColumn',
         'Ext.app.Controller'
     ]);
 
